# ROS-Autonomous-Drone-Landing-on-a-Moving-Platform

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_landing/lib/drone_landing/: landing_controller  platform_mover  state_estimator
install/drone_landing/share/drone_landing/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_landing/share/drone_landing/config/: params.yaml
install/drone_landing/share/drone_landing/launch/: simulation_launch.py
install/drone_landing/share/drone_landing/rviz/: config.rviz
log/: latest_build
src/drone_landing/: setup.py
src/drone_landing/drone_landing/: state_estimator.py
src/drone_landing/models/landing_platform/: model.config  model.sdf
src/drone_landing/models/quadrotor/: model.config  model.sdf
src/drone_landing/worlds/: landing.world
